name:           midisplit
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       <syn>
build-type:     Simple
build-depends:  FUtil, HCodecs, base, filepath, haskell98

executable:     midisplit
main-is:        Main.hs
hs-source-dirs: src
